--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "newman-reporter-json-summary",
-  "version": "1.0.14",
+  "name": "@jhulme/newman-reporter-json-summary",
+  "version": "1.0",
   "description": "A custom Newman Reporter that just reports a summary of the results, rather than the whole structure (which can break JSON.stringify)",
   "main": "index.js",
   "scripts": {
@@ -14,7 +14,7 @@
   ],
   "bugs": "https://github.com/spenceclark/newman-reporter-json-summary/issues",
   "repository": "github:spenceclark/newman-reporter-json-summary",
-  "author": "spenceclark@gmail.com",
+  "author": "jhulme81@gmail.com",
   "license": "ISC",
   "dependencies": {
     "lodash": ">=4.17.15",
